--- a/source/form.html
+++ b/source/form.html
@@ -13,7 +13,7 @@
   <body>
     <header class="page-header">
       <nav class="main-nav">
-        <div class="main-nav__wrapper">
+        <div class="main-nav__wrapper container">
           <a href="index.html" class="main-nav__logo">
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="191" height="39" viewBox="0 0 190.4 37.6" style="enable-background:new 0 0 190.4 37.6;" xml:space="preserve">
               <style type="text/css">
@@ -66,42 +66,57 @@
       </nav>
     </header>
     <main class="page-main order-page">
-      <h1 class="order-page__form-title">Подбор программы</h1>
+      <h1 class="order-page__form-title container">Подбор программы</h1>
       <form action="https://echo.htmlacademy.ru" class="order-form" method="post">
-        <p class="order-form__description">Заполните анкету и мы подберем программу питания для вашего кота</p>
-        <fieldset class="field-group field-group--no-legend cat-data">
-          <div class="field-group__container"> <!-- Сменить название класса -->
+        <p class="order-form__description container">Заполните анкету и мы подберем программу питания для вашего кота</p>
+        <div class="field-group cat-data">
+          <fieldset class="field-group__wrapper container container--exception">
             <label class="field-group__label">Имя:*<input type="text" class="field-group__input" name="cat-name" value="Барсик" required></label>
             <label class="field-group__label">Вес (кг):*<input type="number" class="field-group__input" name="cat-weight" value="7" required></label>
-            <label class="field-group__label field-group__label--last-input">Возраст (лет):<input type="number" class="field-group__input" name="cat-age" value="7"></label>
-          </div>
-          <div class="field-group__radio-series">
-            <label class="field-group__label field-group__label--radio"><input type="radio" class="field-group__radio" name="program-type" value="slim" checked>Похудение</label>
-            <label class="field-group__label field-group__label--radio"><input type="radio" class="field-group__radio" name="program-type" value="pro">Набор массы</label>
-            <label class="field-group__label field-group__label--radio field-group__label--last-input"><input type="radio" class="field-group__radio" name="program-type" value="need-help">Не знаю (Нужен ваш совет)</label>
-          </div>
-        </fieldset>
+            <label class="field-group__label">Возраст (лет):<input type="number" class="field-group__input" name="cat-age" value="7"></label>
+          </fieldset>
+          <fieldset class="field-group__radio-series">
+            <input type="radio" id="slim" class="field-group__radio visually-hidden" name="program-type" value="slim" checked>
+            <label for="slim" class="field-group__label field-group__label--radio">Похудение</label>
+            <input type="radio" id="pro" class="field-group__radio visually-hidden" name="program-type" value="pro">
+            <label for="pro" class="field-group__label field-group__label--radio">Набор массы</label>
+            <input type="radio" id="no-data" class="field-group__radio visually-hidden" name="program-type" value="need-help">
+            <label for="no-data" class="field-group__label field-group__label--radio">Не знаю (Нужен ваш совет)</label>
+          </fielddset>
+        </div>
         <fieldset class="field-group owner-contacts">
-          <legend class="field-group__title field-group__title--width">Контактные данные (владельца кота)</legend>
-          <div class="owner-contacts__wrapper"> <!-- Потребность в обертке? -->
-            <label class="field-group__label field-group__label--left field-group__label--desktop-bottom">E-mail:*<input type="email" class="field-group__input" name="owner-email" value="kuklachev@gmail.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required></label>
-            <label class="field-group__label field-group__label--last-input">Телефон:*<input type="tel" class="field-group__input" name="owner-tel" value="8 (960) 900-60-90" pattern="[0-9]{1} \([0-9]{3}\) [0-9]{3}-[0-9]{2}-[0-9]{2}" required></label>
+          <legend class="field-group__title field-group__title--owner">Контактные данные (владельца кота)</legend>
+          <div class="field-group__owner-wrapper container">
+            <label class="field-group__label field-group__label--owner">E-mail:*<input type="email" class="field-group__input field-group__input--email" name="owner-email" value="kuklachev@gmail.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required></label>
+            <label class="field-group__label field-group__label--owner">Телефон:*<input type="tel" class="field-group__input field-group__input--tel" name="owner-tel" value="8 (960) 900-60-90" pattern="[0-9]{1} \([0-9]{3}\) [0-9]{3}-[0-9]{2}-[0-9]{2}" required></label>
           </div>
         </fieldset>
         <fieldset class="field-group comment">
           <legend class="field-group__title">Комментарий</legend>
-          <label class="field-group__label field-group__label--last-input"><textarea name="comment" class="field-group__textarea">Расскажите обо всех повадках кота</textarea></label>
+          <label class="field-group__label container"><textarea name="comment" class="field-group__textarea">Расскажите обо всех повадках кота</textarea></label>
         </fieldset>
         <fieldset class="extra-field-group">
           <legend class="extra-field-group__title">Дополнительно</legend>
-          <div class="extra-field-group__wrapper"> <!-- Потребность в обертке? -->
-            <label class="extra-field-group__label"><input type="checkbox" class="extra-field-group__checkbox" name="sweetener" checked>Сахарозаменитель</label>
-            <label class="extra-field-group__label"><input type="checkbox" class="extra-field-group__checkbox" name="water">Питьевая вода</label>
-            <label class="extra-field-group__label"><input type="checkbox" class="extra-field-group__checkbox" name="milk">Молоко</label>
-            <label class="extra-field-group__label extra-field-group__label--last-input"><input type="checkbox" class="extra-field-group__checkbox" name="vitamins">Витамины</label>
+          <div class="extra-field-group__wrapper container">
+            <p class="extra-field-group__checkgroup">
+              <input type="checkbox" id="extra-good1" class="extra-field-group__checkbox visually-hidden" name="sweetener" checked>
+              <label for="extra-good1" class="extra-field-group__label">Сахарозаменитель</label>
+            </p>
+            <p class="extra-field-group__checkgroup">
+              <input type="checkbox" id="extra-good2" class="extra-field-group__checkbox visually-hidden" name="water">
+              <label for="extra-good2" class="extra-field-group__label">Питьевая вода</label>
+            </p>
+            <p class="extra-field-group__checkgroup">
+              <input type="checkbox" id="extra-good3" class="extra-field-group__checkbox visually-hidden" name="milk">
+              <label for="extra-good3" class="extra-field-group__label">Молоко</label>
+            </p>
+            <p class="extra-field-group__checkgroup">
+              <input type="checkbox" id="extra-good4" class="extra-field-group__checkbox visually-hidden" name="vitamins">
+              <label for="extra-good4" class="extra-field-group__label extra-field-group__label--last-input ">Витамины</label>
+            </p>
           </div>
         </fieldset>
-        <input type="submit" class="order-form__submit btn--green" value="Отправить заявку"> <!-- Класс модификатора? -->
+        <input type="submit" class="order-form__submit btn btn--green btn--inline" value="Отправить заявку">
         <small class="order-form__note">* — Обязательные поля</small>
       </form>
       <section class="contacts">
@@ -113,7 +128,7 @@
         <img class="contacts__on-map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Адрес на карте">
       </section>
     </main>
-    <footer class="page-footer">
+    <footer class="page-footer container">
       <a href="index.html" class="page-footer__logo">
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="128" height="24" viewBox="0 0 127.8 23.4" style="enable-background:new 0 0 127.8 23.4;" xml:space="preserve">
           <style type="text/css">
